# first_project

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt  test.py
env/: pyvenv.cfg
my-folder/: pyproject.toml
templates/: error.html  extraction.html  index.html  processing.html
