[tool.poetry]
name = "first_project"
version = "0.1.0"
description = ""
authors = ["Shihabaln <shihab.australia@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.9"
pandas = "^1.3.4"
Flask = "^2.0.2"
waitress = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
